# goit-pythonweb-hw-10

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini
src/app/: main.py  settings.py
src/app/helpers/auth/: jwt_manager.py
src/app/helpers/email_sender/: email.py
src/app/repositories/: crud.py
src/app/repositories/contacts/: crud.py
src/app/repositories/users/: users.py
src/app/routers/: contacts.py  healthchecks.py
src/app/routers/auth/: auth.py
src/app/routers/contacts/: contacts.py
src/app/routers/users/: users.py
src/db/: database.py  models.py  settings.py
src/migrations/: env.py
